--- a/static/index.html
+++ b/static/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>labs-platoniq</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Labs Platoniq</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
   </body>
 </html>
